@@ -1,6 +1,7 @@
 Version 1.23.0 *
 ==================
 - Added storing of the fold state for known source files.
+- Fixed incorrect ESC key behavior in Parameter File Editor, Solver Option Editor, and GAMS User Configuration Editor.
 
 Version 1.22.1
 ==================
